--- a/learntec/ae.html
+++ b/learntec/ae.html
@@ -52,7 +52,7 @@
 
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">Courses</a></li>
+                                    <!--  <li><a href="course.html">Courses</a></li> -->
 
                                     <li class="active"><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
@@ -140,12 +140,12 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
+                <!--  <li><a href="course.html">Courses</a></li> -->
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">DevOps</a></li>
-                        <li><a href="ae.html">AEM</a></li>
+                        <li class="active"><a href="ae.html">AEM</a></li>
                         <li><a href="cybersecurity.html">Cyber Security</a></li>
                         <li><a href="python.html">Python</a></li>
                         <li><a href="dataanalyst.html">Data Analytics</a></li>
