--- a/learntec/course.html
+++ b/learntec/course.html
@@ -46,7 +46,7 @@
 
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li class="active"><a href="course.html">Courses</a></li>
+                                    <!-- <li class="active"><a href="course.html">Courses</a></li> -->
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
@@ -128,7 +128,7 @@
             <ul id="mobile-menu-active">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
+                <!--  <li><a href="course.html">Courses</a></li> -->
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
