--- a/learntec/cybersecurity.html
+++ b/learntec/cybersecurity.html
@@ -51,13 +51,13 @@
 
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">Courses</a></li>
+                                    <!--  <li><a href="course.html">Courses</a></li> -->
 
                                     <li class="active"><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">DevOps</a></li>
                                             <li><a href="ae.html">AEM</a></li>
-                                            <li><a href="cybersecurity.html">Cyber Security</a></li>
+                                            <li class="active"><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
                                             <li><a href="dataanalyst.html">Data Analytics</a></li>
                                         </ul>
@@ -134,7 +134,7 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
+                <!--  <li><a href="course.html">Courses</a></li> -->
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
@@ -217,7 +217,7 @@
         </section>
 
         <!-- ======= Team Section ======= -->
-        <section id="team" class="team">
+       <!-- <section id="team" class="team">
             <div class="container" data-aos="fade-down">
 
                 <div class="section-title1">
@@ -294,7 +294,7 @@
                                     class="block">Book a call</button>
 
 
-                                <!--  <h2>Modal Signup Form</h2>-->
+                                <!--  <h2>Modal Signup Form</h2>
 
 
 
@@ -304,7 +304,7 @@
                                     <form class="modal-content" action="/action_page.php">
                                         <div class="container">
                                             <h1>Book your call</h1>
-                                            <!--<p>Please fill in this form to create an account.<p>-->
+                                            <!--<p>Please fill in this form to create an account.<p>
                                             <hr>
                                             <label for="name"><b>Name</b></label>
                                             <input type="text" placeholder="Enter Name" name="name" required>
@@ -323,7 +323,7 @@
                                             </label>
                             
                                             <p>By creating an account you agree to our <a href="#"
-                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>
 
                                             <div class="clearfix">
                                                 <button type="button"
@@ -346,7 +346,7 @@
                                     <form class="modal-content" action="/action_page.php">
                                         <div class="container">
                                             <h1>Book your Class</h1>
-                                            <!--<p>Please fill in this form to create an account.<p>-->
+                                            <!--<p>Please fill in this form to create an account.<p>
                                             <hr>
                                             <label for="name"><b>Name</b></label>
                                             <input type="text" placeholder="Enter Name" name="name" required>
@@ -373,7 +373,7 @@
                                             </label>
                             
                                             <p>By creating an account you agree to our <a href="#"
-                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>
 
                                             <div class="clearfix">
                                                 <button type="button"
@@ -389,7 +389,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- End Team Section -->
 
         <footer id="footer">
