--- a/learntec/dataanalyst.html
+++ b/learntec/dataanalyst.html
@@ -51,7 +51,7 @@
 
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">Courses</a></li>
+                                    <!--  <li><a href="course.html">Courses</a></li> -->
 
                                     <li class="active"><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
@@ -59,7 +59,7 @@
                                             <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
-                                            <li><a href="dataanalyst.html">Data Analytics</a></li>
+                                            <li class="active"><a href="dataanalyst.html">Data Analytics</a></li>
                                         </ul>
                                     </li>
                                     <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
@@ -134,7 +134,7 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
+                <!--  <li><a href="course.html">Courses</a></li> -->
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
@@ -212,7 +212,7 @@
         </section>
 
         <!-- ======= Team Section ======= -->
-        <section id="team" class="team">
+      <!--  <section id="team" class="team">
             <div class="container" data-aos="fade-down">
 
                 <div class="section-title1">
@@ -289,7 +289,7 @@
                                     class="block">Book a call</button>
 
 
-                                <!--  <h2>Modal Signup Form</h2>-->
+                                <!--  <h2>Modal Signup Form</h2> 
 
 
 
@@ -299,7 +299,7 @@
                                     <form class="modal-content" action="/action_page.php">
                                         <div class="container">
                                             <h1>Book your call</h1>
-                                            <!--<p>Please fill in this form to create an account.<p>-->
+                                            <!--<p>Please fill in this form to create an account.<p> 
                                             <hr>
                                             <label for="name"><b>Name</b></label>
                                             <input type="text" placeholder="Enter Name" name="name" required>
@@ -318,7 +318,7 @@
                                             </label>
                             
                                             <p>By creating an account you agree to our <a href="#"
-                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p> 
 
                                             <div class="clearfix">
                                                 <button type="button"
@@ -341,7 +341,7 @@
                                     <form class="modal-content" action="/action_page.php">
                                         <div class="container">
                                             <h1>Book your Class</h1>
-                                            <!--<p>Please fill in this form to create an account.<p>-->
+                                            <!--<p>Please fill in this form to create an account.<p> 
                                             <hr>
                                             <label for="name"><b>Name</b></label>
                                             <input type="text" placeholder="Enter Name" name="name" required>
@@ -368,7 +368,7 @@
                                             </label>
                             
                                             <p>By creating an account you agree to our <a href="#"
-                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p> 
 
                                             <div class="clearfix">
                                                 <button type="button"
@@ -395,7 +395,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Team Section -->
         <footer id="footer">
             <div class="footer-top">
