--- a/learntec/devops.html
+++ b/learntec/devops.html
@@ -51,11 +51,11 @@
 
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">Courses</a></li>
+                                    <!--  <li><a href="course.html">Courses</a></li> -->
 
                                     <li class="active"><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="devops.html">DevOps</a></li>
+                                            <li class="active"><a href="devops.html">DevOps</a></li>
                                             <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
@@ -134,7 +134,7 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
+                <!--  <li><a href="course.html">Courses</a></li> -->
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
@@ -213,7 +213,7 @@
         </section>
 
         <!-- ======= Team Section ======= -->
-        <section id="team" class="team">
+      <!--  <section id="team" class="team">
             <div class="container" data-aos="fade-down">
 
                 <div class="section-title1">
@@ -289,7 +289,7 @@
 
 
 
-                                <!--  <h2>Modal book a call Form</h2>-->
+                                <!--  <h2>Modal book a call Form</h2>
 
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
@@ -301,7 +301,7 @@
                                     <form class="modal-content" action="/action_page.php">
                                         <div class="container">
                                             <h1>Book your call</h1>
-                                            <!--<p>Please fill in this form to create an account.<p>-->
+                                            <!--<p>Please fill in this form to create an account.<p> 
                                             <hr>
                                             <label for="name"><b>Name</b></label>
                                             <input type="text" placeholder="Enter Name" name="name" required>
@@ -320,7 +320,7 @@
                                             </label>
                             
                                             <p>By creating an account you agree to our <a href="#"
-                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p> 
 
                                             <div class="clearfix">
                                                 <button type="button"
@@ -332,7 +332,7 @@
                                     </form>
                                 </div>
 
-                                <!--  <h2>Modal book a class Form</h2>-->
+                                <!--  <h2>Modal book a class Form</h2> 
 
                                 <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
@@ -343,7 +343,7 @@
                                     <form class="modal-content" action="/action_page.php">
                                         <div class="container">
                                             <h1>Book your Class</h1>
-                                            <!--<p>Please fill in this form to create an account.<p>-->
+                                            <!--<p>Please fill in this form to create an account.<p> 
                                             <hr>
                                             <label for="name"><b>Name</b></label>
                                             <input type="text" placeholder="Enter Name" name="name" required>
@@ -372,7 +372,7 @@
                                             </label>
                             
                                             <p>By creating an account you agree to our <a href="#"
-                                                    style="color:dodgerblue">Terms & Privacy</a>.</p>-->
+                                                    style="color:dodgerblue">Terms & Privacy</a>.</p> 
 
                                             <div class="clearfix">
                                                 <button type="button"
@@ -388,7 +388,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- End Team Section -->
 
