--- a/learntec/events.html
+++ b/learntec/events.html
@@ -44,7 +44,7 @@
 
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">Courses</a></li>
+                                    <!--  <li><a href="course.html">Courses</a></li> -->
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
@@ -126,7 +126,7 @@
             <ul id="mobile-menu-active">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="course.html">Courses</a></li>
+                <!--  <li><a href="course.html">Courses</a></li> -->
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
