--- a/learntec/index.html
+++ b/learntec/index.html
@@ -129,7 +129,7 @@
         <nav class="side-mobile-menu">
             <ul id="mobile-menu-active">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li class="active"><a href="about_us.html">About Us</a></li>
+                <li ><a href="about_us.html">About Us</a></li>
                 <!--    <li><a href="course.html">Courses</a></li> -->
 
                 <li class="active"><a href="#">Skills <i class="far fa-angle-right"></i></a>
