--- a/learntec/ae.html
+++ b/learntec/ae.html
@@ -665,11 +665,11 @@
     <script src="assets/js/main.js"></script>
     <script>
         function myFunction() {
-            var element = document.getElementById("myDIV");
-            if (element.style.display === "none") {
-                element.style.display = "block";
+            var x = document.getElementById("myDIV");
+            if (x.style.display === "none") {
+                x.style.display = "block";
             } else {
-                element.style.display = "none";
+                x.style.display = "none";
             }
         }
     </script>
